Add game events, ball movement, and paddle border

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "Lua.diagnostics.globals": [
-        "love"
-    ]
+        "love",
+        "scoreFont",
+        "ballY"
+    ],
+    "Lua.runtime.version": "LuaJIT",
+    "Lua.workspace.library": [
+        "${3rd}/love2d/library"
+    ],
+    "Lua.workspace.checkThirdParty": false
 }
